--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
     </div>
 
+    <hr>
+
+    <div>
+        <button onclick="init()">init</button>;
+        <button onclick="play()">play</button>;
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
